--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "phantomjs-polyfill-find": "ptim/phantomjs-polyfill-find",
     "phantomjs-prebuilt": "2.1.16",
     "requirejs": "2.3.5",
+    "rework-npm-cli": "0.1.3",
     "watchify": "3.9.0"
   },
   "snyk": true
